--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "tarkovfeecal",
   "version": "1.0.0",
   "description": "A website that shows the fleamarket fee for items from the hit game Escape From Tarkov.",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build -- --env optimization=prod",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "dependencies": {
     "chart.js": "^4.2.1",
     "fuse.js": "^6.6.2",
+    "gh-pages": "^5.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
