--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A website that shows the fleamarket fee for items from the hit game Escape From Tarkov.",
   "main": "webpack.config.js",
+  "homepage": "https://antheboets.github.io/tarkov-flee-cal",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
